2007-04-27  Kevin Buettner  <kevinb@redhat.com>

	* solib-frv.c (lm_base): Bail out if the main executable has
	not been relocated.

2007-04-27  Ulrich Weigand  <uweigand@de.ibm.com>

	* alpha-linux-tdep.c (alpha_linux_supply_fpregset): Correct location
	of FPCR register in fpregset.

2007-04-27  Maciej W. Rozycki  <macro@mips.com>

	* Makefile.in (gdbtk-wrapper.o): Update dependencies.
	(gdbtk-varobj.o, gdbtk-cmds.o, gdbtk-stack.o): Likewise.

2007-04-27  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/rs6000/nm-rs6000.h (CHILD_SPECIAL_WAITSTATUS): Remove.
	* rs6000-nat.c (rs6000_wait): New function.
	(_initialize_core_rs6000): Install it as to_wait target method.
	* target.c (store_waitstatus): Don't check CHILD_SPECIAL_WAITSTATUS.

2007-04-27  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/rs6000/nm-rs6000.h (TARGET_CREATE_INFERIOR_HOOK): Remove.
	* fork-child.c (fork_inferior): Don't call TARGET_CREATE_INFERIOR_HOOK.
	* rs6000-nat.c (super_create_inferior): New variable.
	(rs6000_create_inferior): Make static.  Adapt argument list.  Call
	original version of create_inferior via super_create_inferior.
	(_initialize_core_rs6000): Install to_create_inferior target method.

2007-04-27  Ulrich Weigand  <uweigand@de.ibm.com>

	* aix-thread.c (aix_thread_xfer_memory): Replace by ...
	(aix_thread_xfer_partial): ... this.
	(init_aix_thread_ops): Install to_xfer_partial instead
	of deprecated_xfer_memory target method.

	* config/powerpc/aix.mh (NATDEPFILES): Remove infptrace.o
	and inftarg.o, add inf-ptrace.o.
	* config/rs6000/nm-rs6000.h (FETCH_INFERIOR_REGISTERS,
	CHILD_XFER_MEMORY, KERNEL_U_SIZE, kernel_u_size): Remove.
	* rs6000-nat.c: Include "inf-ptrace.h" and "gdb_stdint.h".
	(fetch_inferior_registers): Rename to ...
	(rs6000_fetch_inferior_registers): ... this.  Make static.
	(store_inferior_registers): Rename to ...
	(rs6000_store_inferior_registers): ... this.  Make static.
	(read_word, child_xfer_memory): Remove.
	(rs6000_xfer_partial): New function.